tests/snapshots/compiler_error_fixtures/duplicate_instance.snap
---
source: tests/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/duplicate_instance.flx
== compile ==
failed (compile)
== diagnostics ==
error[E001]: Duplicate Name

Duplicate binding: `__tc_Sizeable_Int_size` is already defined.

  examples/compiler_errors/duplicate_instance.flx:15:1
   |
15 | instance Sizeable<Int> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
16 |     fn size(x) { x + 1 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^
17 | }
   | ^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/compiler_errors/duplicate_instance.flx:11:1
   |
11 | instance Sizeable<Int> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
12 |     fn size(x) { x }
   | ^^^^^^^^^^^^^^^^^^^^
13 | }
   | ^


error[E443]: Duplicate Instance

Duplicate instance for `Sizeable<Int>`.

  examples/compiler_errors/duplicate_instance.flx:15:1
   |
15 | instance Sizeable<Int> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
16 |     fn size(x) { x + 1 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^
17 | }
   | ^

Found 2 errors.
== stdout ==
<not executed>
